--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,6 @@ steps:
 - script: |
     npm install -g @angular/cli
     npm install
+    npm run test-single-headless
     ng build --prod
   displayName: 'npm install, Test and build'
