--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --browsers=PhantomJS --reporters=progress,junit",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "test-single-headless": "ng test --browsers=PhantomJS --reporters=progress,junit"
