--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webdriver-launcher": "^1.0.5",
     "phantomjs-prebuilt": "^2.1.16",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
